# yabg

./: .clangd  .gitignore  BlockRegistry.cpp  BlockRenderer.cpp  CMakeLists.txt  PerlinNoise.hpp  README.md  compile_flags.txt  main.cpp  package.ps1  worldManager.cpp  wurdleapi.cpp
include/: block.h  block_registry.h  camera_controller.h  input.h  render.h  world.h
src/: camera_controller.cpp  input.cpp  main.cpp  render.cpp  world.cpp
